test/errors/type/int/tofloat.yasl
echo 0.tofloat(1.0)
